# StudentDatabase

./: CLImain.cpp  CMakeLists.txt  Course.cpp  Course.h  Database.cpp  Database.h  Enrollment.cpp  Enrollment.h  README.md  SqliteDB.cpp  SqliteDB.h  Student.cpp  Student.h  main.cpp  run
tests/: CMakeLists.txt  test_database.cpp  test_main.cpp  test_student.cpp  tests.cpp
